--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-
-###> symfony/framework-bundle ###
-/.env.local
-/.env.local.php
-/.env.*.local
-/config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
+# Symfony
 /var/
 /vendor/
-###< symfony/framework-bundle ###
+/.env.local
+.env.*.local
+/public/bundles/
+/node_modules/
+npm-debug.log
+
+# PHPUnit
+/phpunit.xml
+/phpunit.xml.dist
+
+# IDEs
+.idea/
+.vscode/
+*.iml
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Composer
+composer.lock
