--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "authors": [
         {
             "name": "Eelan",
-            "email": ""
+            "email": "contact@eelan.fr"
         }
     ],
     "minimum-stability": "stable"
