--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A collection of traits for Doctrine entities.",
     "type": "library",
     "require": {
-        "doctrine/orm": "^2.16"
+        "doctrine/orm": "^2.16 || ^3.0"
     },
     "license": "MIT",
     "autoload": {
